# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-eee1b601e453172fa58de7090a3d7f8bb01ad0a326542992872680784387dff9.json
configuration/: base.yaml  production.yaml
migrations/: 20250110065921_create_subscriptions_table.sql  20250131010035_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  errors.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscription_confirmation.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscription_confirmations.rs  subscriptions.rs
