[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Donte Littlejohn <litdonte03@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.5.0"

[dev-dependencies]
reqwest = "0.12.12"
