[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Donte Littlejohn <litdonte03@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
actix-web = "4.9.0"
config = "0.15.5"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.5.0"
uuid = { version = "1.11.1", features = ["v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.15"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12.12"
